#cm: Removing surefire properties.